# quant-research-lab

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  instructions.txt  pyproject.toml  requirements.txt  run_backtest.py  run_pipeline.py  train_rl.py  validation_log.txt
alpha_research/: __init__.py  alpha_analyzer.py  alpha_signal.py
backend/: rest_server.py
config/: __init__.py  settings.py  trading.yaml
dashboard/: __init__.py  app.py
data_pipeline/: __init__.py  market_data_collector.py  news_collector.py  orderbook_stream.py
deployment/: docker-compose.prod.yml  render.yaml
docs/: quant_research_paper.md  quant_research_report.md  system_validation.md  system_validation_report.md
execution_engine/: __init__.py  executor.py
experiments/: __init__.py  experiment_manager.py
feature_engine/: __init__.py  orderbook_features.py  sentiment_features.py  technical_indicators.py
feature_store/: __init__.py  registry.py  store.py
live_trading/: paper_trader.py
market_intelligence/: __init__.py  aggregator.py  market_regime.py
market_simulator/: __init__.py  simulator.py
optimization/: optuna_optimizer.py
orchestrator/: __init__.py  pipeline_runner.py
reinforcement_learning/: __init__.py  agent.py  environment.py  train.py
research_lab/: __init__.py
risk_management/: __init__.py  risk_manager.py
scheduler/: __init__.py  job_runner.py
scripts/: run_demo.sh  validate_alpha.py  validate_backtest.py  validate_platform.py  validate_rl.py
signal_fusion/: __init__.py  fusion_engine.py
tests/: __init__.py  test_feature_engine.py  test_research.py  test_research_lab.py  test_trading_core.py
utils/: logger.py
(+25 files in other folders)
